Fix alignment of NavBullets

--- a/src/components/NavBullet/NavBullet.module.scss
+++ b/src/components/NavBullet/NavBullet.module.scss
@@ -1,17 +1,17 @@
 @use "../../variables" as v;
 
 .bullet {
-  width: 20px;
-  height: 20px;
-  border: 2px solid v.$secondary-color;
-
-  background-color: yellow;
+  width: 12px;
+  height: 12px;
+  transform: rotate(45deg);
+  border: none;
+  background-color: v.$secondary-color;
 }
 
 .bullet-expanded {
   width: 20px;
   height: 20px;
-  border: 2px solid v.$secondary-color;
-
+  transform: rotate(0);
+  border: 2px solid v.$accent-color;
   background-color: transparent;
 }
